# nevermined-eg

./: README.md  main.py  my_endpoint.py  pyproject.toml
